# binary-tree-nes

./: .gitignore  README.md  example.py  pyproject.toml  relations.txt  setup.py
.github/workflows/: ci.yml
binary_tree/: __init__.py  main.py
tests/: test_arvore_binaria.py
